refactor: isolate safe cases from cross-CWE ambiguity