@@ -1,13 +1,13 @@
 package io.xguardian.javabench.cases.level1;
 
 import java.net.URI;
-import java.net.URL;
 import java.net.URLEncoder;
 import java.net.http.HttpRequest;
 import java.nio.charset.StandardCharsets;
 
 public class Case000184 {
     public Object run(String token) throws Exception {
-        return new URL("https://api.example.test/session?token=" + URLEncoder.encode(token, StandardCharsets.UTF_8));
+        URI uri = URI.create("https://api.example.test/session");
+        return HttpRequest.newBuilder(uri).header("Authorization", "Bearer " + token).GET().build();
     }
 }
