@@ -1,7 +1,6 @@
 package io.xguardian.javabench.cases.level2;
 
 import java.net.URI;
-import java.net.URL;
 import java.net.URLEncoder;
 import java.net.http.HttpRequest;
 import java.nio.charset.StandardCharsets;
@@ -9,6 +8,7 @@ import java.nio.charset.StandardCharsets;
 public class Case000187 {
     public Object run(String token) throws Exception {
         String value = token == null ? "" : token.trim();
-        return new URL("http://api.example.test/session?token=" + URLEncoder.encode(value, StandardCharsets.UTF_8));
+        URI uri = URI.create("http://api.example.test/session");
+        return HttpRequest.newBuilder(uri).header("Authorization", "Bearer " + value).GET().build();
     }
 }
