@@ -2,7 +2,6 @@ package io.xguardian.javabench.cases.level4;
 
 import jakarta.servlet.http.HttpServletRequest;
 import java.net.URI;
-import java.net.URL;
 import java.net.URLEncoder;
 import java.net.http.HttpRequest;
 import java.nio.charset.StandardCharsets;
@@ -10,6 +9,7 @@ import java.nio.charset.StandardCharsets;
 public class Case000196 {
     public Object run(HttpServletRequest request) throws Exception {
         String value = request.getParameter("token");
-        return new URL("https://api.example.test/session?token=" + URLEncoder.encode(value, StandardCharsets.UTF_8));
+        URI uri = URI.create("https://api.example.test/session");
+        return HttpRequest.newBuilder(uri).header("Authorization", "Bearer " + value).GET().build();
     }
 }
